# sbc_algorithm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
code_dir/: Cargo.toml
code_dir/src/: clusters.rs  hash_function.rs  main.rs  tests.rs
code_dir/src/clusters/: chunk.rs  chunk_with_delta_code.rs  chunk_with_full_code.rs  graph.rs  levenshtein_functions.rs
code_dir/src/my_lib/: chunk.rs  chunk_with_delta_code.rs  chunk_with_full_code.rs  decode.rs  graph.rs  levenshtein_functions.rs  mod.rs
code_dir/src/my_lib/chunk_with_full_code/: mod.rs
code_dir/src/my_lib/graph/: mod.rs
code_dir/test/: test1.txt
runner/: Cargo.toml
runner/files/: my_data  output.txt  test1.txt
runner/src/: main.rs
src/: broders_method.rs  chunkfs_sbc.rs  clusterer.rs  decode.rs  decoder.rs  decoders.rs  encoder.rs  encoders.rs  graph.rs  hash_function.rs  hash_functions.rs  hasher.rs  levenshtein_functions.rs  lib.rs
src/clusterer/: eq_clusterer.rs  graph.rs  graph_clusterer.rs
src/decoder/: gdelta_decooder.rs  levenshtein_decoder.rs  zdelta_decoder.rs
src/encoder/: ddelta_encoder.rs  gdelta_encoder.rs  levenshtein_encoder.rs  xdelta_encoder.rs  zdelta_comprassion_error.rs  zdelta_encoder.rs  zdelta_match_pointers.rs
src/hasher/: aronovich_hash.rs  broders_method.rs  odess_hasher.rs
tests/: sbc_tests.rs
