[workspace]
members = ["runner"]

[package]
name = "sbc_algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git", branch = "master" }

[dev-dependencies]
rand = "0.8.5"
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git", branch = "master",  features = ["hashers", "chunkers"] }
