[workspace]
members = ["runner"]

[package]
name = "sbc_algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git" }
futures = "0.3"
rayon = "1.10"
zstd = "0.13"
thiserror = "2.0.12"
huffman-compress = "0.6.1"
bit-vec = "0.6.3"
log = "0.4.27"
env_logger = "0.11.8"
fasthash = "0.4.0"

[dev-dependencies]
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git", features = ["chunkers", "hashers"]}
rand = "0.8.5"