[package]
name = "runner"
version = "0.1.0"
edition = "2021"


[dependencies]
sbc_algorithm = { git = "https://github.com/maxscherbakov/sbc_algorithm.git" }
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git", branch = "SBC-FBC-support",  features = ["hashers", "chunkers"] }
rand = "0.8.5"
